# aoc2022-rust

./: Cargo.toml
aoc/src/: lib.rs
challenges/day00/: Cargo.toml
challenges/day01/: Cargo.toml
challenges/day02/: Cargo.toml
challenges/day03/: Cargo.toml
challenges/day04/: Cargo.toml
challenges/day05/: Cargo.toml
challenges/day06/: Cargo.toml
challenges/day07/: Cargo.toml
day01a/: Cargo.toml
day01a/src/: main.rs
day01b/: Cargo.toml
day01b/src/: main.rs
day02a/: Cargo.toml
day02a/src/: main.rs
day02b/: Cargo.toml
day03a/: Cargo.toml
day03b/: Cargo.toml
day04a/: Cargo.toml
day04b/: Cargo.toml
day05a/: Cargo.toml
day05b/: Cargo.toml
day06a/: Cargo.toml
day06b/: Cargo.toml
puzzles/day16/: Cargo.toml
puzzles/day16/benches/: aoc.rs
puzzles/day16/src/: main.rs
puzzles/day16/src/answer/: parse.rs  solve.rs
puzzles/day16/src/core/: cave.rs  mod.rs  path.rs
puzzles/day19/: Cargo.toml
puzzles/day19/benches/: aoc.rs
puzzles/day19/src/: main.rs
puzzles/day19/src/answer/: parse.rs  solve.rs
puzzles/day19/src/aoc/: solve.rs
puzzles/day19/src/core/: blueprint.rs  mod.rs  resource.rs
puzzles/day22/: Cargo.toml
puzzles/day22/benches/: aoc.rs
puzzles/day22/src/: lib.rs  main.rs
puzzles/day22/src/answer/: parse.rs  solve.rs
puzzles/day22/src/core/: board.rs  cube.rs  cube_net.rs  direction.rs  map.rs  mod.rs  movement.rs  tile.rs  walk.rs
puzzles/day22/src/core/geometry/: grid.rs  mod.rs  rotation.rs
puzzles/day22/src/geometry/: axes.rs  direction.rs  location.rs  rectangle.rs  size.rs
puzzles/day22/src/math/: gcd.rs  mod.rs
(+320 files in other folders)
