[package]
name = "day16"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
aoc = { path = "../../aoc" }
itertools = "0.10.5"
regex = "1.7.0"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "aoc"
harness = false
