[package]
name = "day19"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
aoc = { path = "../../lib/aoc" }
lazy_static = "1.4"
rayon = "1.6"
regex = "1.7"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "aoc"
harness = false
