[package]
name = "day22"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
aoc = { path = "../../lib/aoc" }
geometry = { path = "../../lib/geometry" }
lazy_static = "1.4.0"

[dev-dependencies]
criterion = "0.4"
itertools = "0.10.5"

[[bench]]
name = "aoc"
harness = false
